--- a/app/src/main/res/layout/activity_qr_code_list.xml
+++ b/app/src/main/res/layout/activity_qr_code_list.xml
@@ -4,30 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".shoppinglist.QrCodeItemsActivity">
+    tools:context=".qr.QrCodeListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvQrs"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/rvQrItems"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="3"
-        tools:listitem="@layout/view_qr_scanned_item" />
+        tools:itemCount="5"
+        tools:listitem="@layout/view_qr_list_items" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="0dp"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:onClick="onFinished"
-        android:text="@string/fertig"
+        android:clickable="true"
+        android:onClick="onNewQr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:srcCompat="@drawable/ic_add_black_48dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
