--- a/app/src/main/res/layout/view_qr_scanned_item.xml
+++ b/app/src/main/res/layout/view_qr_scanned_item.xml
@@ -13,8 +13,8 @@
         android:textSize="18sp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
-        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
-        app:layout_constraintStart_toStartOf="@+id/tvTitle"
+        app:layout_constraintEnd_toEndOf="@+id/tvTitleQrArticle"
+        app:layout_constraintStart_toStartOf="@+id/tvTitleQrArticle"
         app:layout_constraintTop_toTopOf="@+id/textView9" />
 
     <TextView
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btnChangeQuantity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -42,10 +42,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleQrArticle" />
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvTitleQrArticle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
