--- a/app/src/main/res/layout/view_todolist_item.xml
+++ b/app/src/main/res/layout/view_todolist_item.xml
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/ivInfoToDo"
+            android:id="@+id/ivInfoQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
@@ -62,7 +62,7 @@
             app:srcCompat="@drawable/ic_info_blue_24dp" />
 
         <ImageView
-            android:id="@+id/ivEditToDo"
+            android:id="@+id/ivEditQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
@@ -71,7 +71,7 @@
             app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
 
         <ImageView
-            android:id="@+id/ivDeleteToDo"
+            android:id="@+id/ivDeleteQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
