--- a/app/src/main/res/layout/view_shoppinglist_item.xml
+++ b/app/src/main/res/layout/view_shoppinglist_item.xml
@@ -49,11 +49,11 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="@+id/llActions"
+        app:layout_constraintEnd_toStartOf="@+id/llActions"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvAmount"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/llActions"
         tools:text="Test" />
 
     <View
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvTitleToDo" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/llActions"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
