--- a/app/src/main/res/layout/view_qr_list_items.xml
+++ b/app/src/main/res/layout/view_qr_list_items.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/viewOccupied"
+        android:id="@+id/viewOccupiedEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -51,7 +51,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/llActions"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
@@ -62,18 +62,9 @@
         app:layout_constraintTop_toTopOf="@+id/ivQrCode">
 
         <ImageView
-            android:id="@+id/ivInfoQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_info_blue_24dp" />
-
-        <ImageView
             android:id="@+id/ivEditQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
@@ -93,11 +84,11 @@
         android:layout_height="wrap_content"
         android:text="@string/id"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toBottomOf="@+id/viewOccupied"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="@+id/viewOccupiedEdit"
+        app:layout_constraintEnd_toStartOf="@+id/llActions"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/viewOccupied"
-        app:layout_constraintTop_toTopOf="@+id/viewOccupied"
+        app:layout_constraintStart_toEndOf="@+id/viewOccupiedEdit"
+        app:layout_constraintTop_toTopOf="@+id/viewOccupiedEdit"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
