--- a/app/src/main/res/layout/fragment_shooping_list.xml
+++ b/app/src/main/res/layout/fragment_shooping_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/border" >
+    android:background="@drawable/border">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvShoppingList"
@@ -18,12 +18,11 @@
         tools:listitem="@layout/view_shoppinglist_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
-        android:onClick="addShoppingList"
+        android:id="@+id/btnAddToShop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
