--- a/app/src/main/res/layout/popup_shoppinglist.xml
+++ b/app/src/main/res/layout/popup_shoppinglist.xml
@@ -1,27 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:orientation="vertical"><![CDATA[
-
-
-
-
-
-
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-
-
-
-
-
-    ]]>
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -42,7 +26,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:onClick="onAddQRShoppingList"
         android:text="@string/qr_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -68,7 +51,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:onClick="onAddCustomShoppingList"
         android:text="@string/custom"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
