--- a/app/src/main/res/layout/activity_custom_shopping_list.xml
+++ b/app/src/main/res/layout/activity_custom_shopping_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tvAnzahl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_anzahl"
+        android:text="@string/quantity"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/tvAnzahlTemplate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/tvTitel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_Titel"
+        android:text="@string/title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/txtTitel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:id="@+id/tvBez"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_bezeichnung"
+        android:text="@string/tv_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/txtBezeichnung"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/tv_Titel"
+        android:hint="@string/title"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/tvBez"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/tv_bezeichnung"
+        android:hint="@string/tv_content"
         android:inputType="textMultiLine|textPersonName"
         android:lines="3"
         android:minLines="3"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/tv_anzahl"
+        android:hint="@string/quantity"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/tvTitel"
         app:layout_constraintEnd_toEndOf="parent"
