--- a/app/src/main/res/layout/activity_custom_todo_list.xml
+++ b/app/src/main/res/layout/activity_custom_todo_list.xml
@@ -23,13 +23,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/tv_Titel"
+        android:hint="@string/title"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/tvContentTodo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/tvContentTodo"
@@ -45,14 +46,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleTodo" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleTodo"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="@string/tv_Titel"
+        android:text="@string/title"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tvTitleTodo"
         app:layout_constraintEnd_toEndOf="parent"
