--- a/app/src/main/res/layout/activity_qr_code_items.xml
+++ b/app/src/main/res/layout/activity_qr_code_items.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:onClick="onFinished"
-        android:text="@string/fertig"
+        android:text="@string/finished"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
