--- a/app/src/main/res/layout/activity_qr_code_list.xml
+++ b/app/src/main/res/layout/activity_qr_code_list.xml
@@ -24,6 +24,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="onNewQr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
