--- a/app/src/main/res/layout/activity_qr_code_table_add.xml
+++ b/app/src/main/res/layout/activity_qr_code_table_add.xml
@@ -38,6 +38,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add_black_48dp" />
@@ -48,7 +49,7 @@
         android:layout_height="wrap_content"
         android:onClick="onFinish"
         android:layout_marginStart="16dp"
-        android:text="@string/fertig"
+        android:text="@string/finished"
         app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/floatingActionButton3" />
