--- a/app/src/main/res/layout/fragment_calendar_main.xml
+++ b/app/src/main/res/layout/fragment_calendar_main.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".calendar.CalendarMainActivity">
+    tools:context=".calendar.CalendarMainFragment">
 
     <TextView
         android:id="@+id/tvWeekNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/week_number"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -21,7 +22,8 @@
         android:id="@+id/rvCal"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton6"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWeekNumber"
@@ -40,16 +42,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:selectionColor="@color/colorAccent"
         app:todayLabelColor="@color/colorPrimaryDark"
-        app:datePicker="false"/>
+        app:datePicker="true"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton6"
+        android:id="@+id/btnAddCal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        android:onClick="onNewCalendarEntry"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add_black_48dp" />
