--- a/app/src/main/res/layout/popup_shoppinglist.xml
+++ b/app/src/main/res/layout/popup_shoppinglist.xml
@@ -19,7 +19,7 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/qrcodescan_120401" />
+        app:srcCompat="@drawable/qrcodescan_120401"/>
 
     <Button
         android:id="@+id/btnQrShopping"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:onClick="onAddTemplateShoppingList"
-        android:text="@string/vorlage"
+        android:text="@string/template"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
