--- a/app/src/main/res/layout/popup_template_add_shopping.xml
+++ b/app/src/main/res/layout/popup_template_add_shopping.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
@@ -10,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="@string/tv_anzahl"
+        android:text="@string/quantity"
         app:layout_constraintBottom_toBottomOf="@+id/tvAnzahlTemplate"
         app:layout_constraintEnd_toStartOf="@+id/tvAnzahlTemplate"
         app:layout_constraintHorizontal_bias="0.5"
@@ -29,7 +30,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvAnzahl"
-        app:layout_constraintTop_toBottomOf="@+id/spCalendar" />
+        app:layout_constraintTop_toBottomOf="@+id/spCalendar"
+        android:autofillHints=""
+        tools:ignore="LabelFor" />
 
     <Spinner
         android:id="@+id/spCalendar"
@@ -47,7 +50,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/vorlage"
+        android:text="@string/template"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         app:layout_constraintEnd_toEndOf="@+id/spCalendar"
