--- a/app/src/main/res/layout/popup_template_add_todo.xml
+++ b/app/src/main/res/layout/popup_template_add_todo.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/vorlage"
+        android:text="@string/template"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         app:layout_constraintEnd_toEndOf="parent"
