--- a/app/src/main/res/layout/view_qr_list_items.xml
+++ b/app/src/main/res/layout/view_qr_list_items.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:text="Belegt"
+            android:text="@string/occupied"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/ivOccupied"
             app:layout_constraintStart_toEndOf="@+id/ivOccupied"
@@ -65,7 +65,7 @@
             android:id="@+id/ivEditQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
 
@@ -73,7 +73,7 @@
             android:id="@+id/ivDeleteQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_delete_black_24dp" />
     </LinearLayout>
