--- a/app/src/main/res/layout/view_todolist_item.xml
+++ b/app/src/main/res/layout/view_todolist_item.xml
@@ -57,7 +57,7 @@
             android:id="@+id/ivInfoQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_info_blue_24dp" />
 
@@ -74,7 +74,7 @@
             android:id="@+id/ivDeleteQr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_delete_black_24dp" />
     </LinearLayout>
