--- a/app/src/main/res/layout/view_calendar_list_item.xml
+++ b/app/src/main/res/layout/view_calendar_list_item.xml
@@ -65,4 +65,14 @@
         app:layout_constraintStart_toEndOf="@+id/textView28"
         app:layout_constraintTop_toTopOf="@+id/textView28"
         tools:text="12.05.2019 12:30" />
+
+    <ImageView
+        android:id="@+id/ivDeleteEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_delete_black_24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
